--- a/apps/templates/department_head.html
+++ b/apps/templates/department_head.html
@@ -126,8 +126,8 @@
         }
         .profile{
         position: fixed;
-        top: 20px;
-        right: 70px;
+        top: 18px;
+        right: 50px;
     }
     .profile a {
         display: block;
@@ -141,23 +141,39 @@
         }
 
         .profile img {
-        width: 80px;
-        height: 80px;
+        width: 60px;
+        height: 60px;
         vertical-align: middle;
         }
+        h2{
+            font-size: 20px;
+            position: fixed;
+        top: 60px;
+        right: 40px;
+        }
+        .navigation {
+    background-color: #546cb9;
+    padding: 10px;
+}
+
     </style>
 </head>
 <body>
     <div class="banner">
-        <h1>Requisition Management System</h1>
+        <h1>Department Head</h1>
+        <h2>Welcome, {{ username }}!</h2> 
         <div class="profile">
             <a href="{% url 'profile_details' %}" ><img src="/static/images/profile.png" alt="Logo"></a>
+           
             </div>
         <div class="logo">
             <img src="/static/images/logo.png" alt="Logo">
         </div>
     </div>
-    <h1>Department Head</h1>
+    <div class="navigation">
+
+    </div>
+    
     {% if requisitions %}
         <table>
             <thead>
@@ -188,7 +204,7 @@
             </tbody>
         </table>
     {% else %}
-        <p class="empty-message">No requisitions found.</p>
+        <p class="empty-message">No requisitions found for approval</p>
     {% endif %}
 
     <!-- Popup HTML -->
