--- a/apps/templates/homepage.html
+++ b/apps/templates/homepage.html
@@ -94,6 +94,7 @@
             left: 20px;
         }
        .banner h2{
+        font-size: 20px;
         color:blue;
         text-align: right;
        }
