--- a/apps/templates/profile_details.html
+++ b/apps/templates/profile_details.html
@@ -68,7 +68,7 @@
 <body>
     <div class="container">
         <h1>Profile Details</h1>
-        {%if photo%}
+        {%if user.photo%}
         <div class="profile-photo">
             <img src="{{ user.photo.url }}" alt="Profile Photo">
         </div>
@@ -91,7 +91,8 @@
             <a href="{% url 'update_profile' %}">Edit Profile</a>
             <!-- Link to the update profile page -->
 
-            <a href="{% url 'administrations' %}">Back to Home</a>
+            
+
             <!-- Link back to the home page or any other relevant page -->
         </div>
     </div>
