--- a/apps/templates/store_executive.html
+++ b/apps/templates/store_executive.html
@@ -132,8 +132,8 @@
 
 .notification-button a {
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   background-color: #fff;
   border-radius: 50%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -214,21 +214,29 @@
         }
 
         .profile img {
-        width: 80px;
-        height: 80px;
+        width: 60px;
+        height: 60px;
         vertical-align: middle;
+        }
+        h2{
+            font-size: 20px;
+            position: fixed;
+            top: 90px;
+            right: 200px;
         }
     </style>
 </head>
 <body>
     <div class="banner">
         <h1>Store Executive</h1>
+       
         <div class="logo">
             <img src="/static/images/logo.png" alt="Logo">
         </div>
         <div class="profile">
             <a href="{% url 'profile_details' %}" ><img src="/static/images/profile.png" alt="Logo"></a>
-            </div>
+            <h2>Welcome, {{ username }}!</h2>    
+        </div>
         
         <div class="notification-button">
             <a href="{% url 'notifications' %}">
@@ -290,7 +298,7 @@
             </tbody>
         </table>
     {% else %}
-        <p class="empty-message">No requisitions found.</p>
+        <p class="empty-message">No requisitions found for approval.</p>
     {% endif %}
 
     <!-- Popup HTML -->
