--- a/apps/templates/report.html
+++ b/apps/templates/report.html
@@ -226,7 +226,7 @@
     <div id="add-report-popup" class="popup">
         <div class="popup-content">
             <span class="close">&times;</span>
-            <h2>Add Report</h2>
+            <h2>Add Products</h2>
             <form action="{% url 'add_report' requisition_no %}" method="POST">
                 {% csrf_token %}
                 <label for="item_details">Item Details:</label>
