--- a/apps/templates/requisition_list.html
+++ b/apps/templates/requisition_list.html
@@ -99,7 +99,7 @@
                     <th>Requisition No.</th>
                     <th>Remark</th>
                     <th>Approval Status</th>
-                    <th>Action</th>
+                    <th>Report</th>
                 </tr>
             </thead>
             <tbody>
