--- a/apps/templates/create_requisition.html
+++ b/apps/templates/create_requisition.html
@@ -2,12 +2,11 @@
 <html>
 <head>
     <title>Create Requisition</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/neat/1.8.0/neat.min.css">
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
             background-color: #f2f3f5;
-            
-            
         }
 
         h1 {
@@ -24,8 +23,9 @@
             border-radius: 5px;
         }
 
-        form input[type="text"], form textarea {
-            width: 90%;
+        form input[type="text"],
+        form textarea {
+            width: 100%;
             padding: 10px;
             margin-bottom: 10px;
             border: 1px solid #ccc;
@@ -44,6 +44,16 @@
         form button[type="submit"]:hover {
             background-color: #45a049;
         }
+        form select,
+        form input[type="date"],
+        form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        
 
         .back-button-container {
             margin-top: 20px;
@@ -70,8 +80,39 @@
     <h1>CREATE REQUISITION</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Create</button>
+        <div class="row">
+            <div class="col-xs-12">
+                <label for="user_name">User Name:</label>
+                <input type="text" id="user_name" name="user_name" maxlength="100" required>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <label for="department_name">Department:</label>
+                <select id="department_name" name="department_name">
+                    {% for department in department_list %}
+                        <option value="{{ department.department_name }}">{{ department.department_name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <label for="requisition_date">Requisition Date:</label>
+                <input type="date" id="requisition_date" name="requisition_date" value="{{ today }}" required>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <label for="remark">Remark:</label>
+                <textarea id="remark" name="remark" rows="4" cols="50"></textarea>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <button type="submit">Create</button>
+            </div>
+        </div>
     </form>
     <div class="back-button-container">
         <a href="{% url 'home_page' %}" class="back-button">Go back to home page</a>
