--- a/apps/templates/create_purchase.html
+++ b/apps/templates/create_purchase.html
@@ -53,6 +53,26 @@
         form button[type="submit"]:hover {
             background-color: #45a049;
         }
+        
+        .back-button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+        
+        .back-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #09c237;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        
+        .back-button:hover {
+            background-color: #07729c;
+        }
     </style>
 </head>
 <body>
@@ -73,5 +93,8 @@
         </div>
         <button type="submit">Create</button>
     </form>
+    <div class="back-button-container">
+        <a href="{% url 'store_executive' %}" class="back-button">Go back to Store Executive</a>
+    </div>
 </body>
 </html>
