--- a/apps/templates/create_store_balance.html
+++ b/apps/templates/create_store_balance.html
@@ -55,6 +55,26 @@
         form button[type="submit"]:hover {
             background-color: #45a049;
         }
+        
+        .back-button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+        
+        .back-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #09c237;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        
+        .back-button:hover {
+            background-color: #07729c;
+        }
     </style>
 </head>
 <body>
@@ -80,6 +100,9 @@
             <textarea id="remark" name="remark" rows="4"></textarea>
             <button type="submit">Create</button>
         </form>
+        <div class="back-button-container">
+            <a href="{% url 'store_executive' %}" class="back-button">Go back to Store Executive</a>
+        </div>
     </div>
 </body>
 </html>
