--- a/apps/templates/profile_details.html
+++ b/apps/templates/profile_details.html
@@ -91,7 +91,8 @@
             <a href="{% url 'update_profile' %}">Edit Profile</a>
             <!-- Link to the update profile page -->
 
-            
+            <a href="{% url 'update_credentials' %}" class="button">Update Credentials</a>
+        
 
             <!-- Link back to the home page or any other relevant page -->
         </div>
