--- a/apps/templates/store_executive.html
+++ b/apps/templates/store_executive.html
@@ -214,8 +214,9 @@
         }
 
         .profile img {
-        width: 60px;
-        height: 60px;
+        width: 70px;
+        height: 70px;
+        border-radius: 50px;
         vertical-align: middle;
         }
         h2{
@@ -234,7 +235,11 @@
             <img src="/static/images/logo.png" alt="Logo">
         </div>
         <div class="profile">
-            <a href="{% url 'profile_details' %}" ><img src="/static/images/profile.png" alt="Logo"></a>
+            {%if user.photo%}
+            <a href="{% url 'profile_details' %}" ><img src="{{ user.photo.url }}"  alt="Logo"></a>
+            {%else%}
+            <a href="{% url 'profile_details' %}" ><img src="/static/images/profile.png"   alt="Logo"></a>
+            {%endif%}
             <h2>Welcome, {{ username }}!</h2>    
         </div>
         
@@ -261,7 +266,8 @@
                 <a href="{% url 'create_purchase' %}">Create Purchase</a>
                 <a href="{% url 'purchase_list' %}">Purchase List</a>
             </div>
-        </li>
+            </li>
+            <li class="dropdown"><a href="{% url 'login_view' %}">Logout</a></li>
         </ul>
     </div>
     
