--- a/apps/templates/homepage.html
+++ b/apps/templates/homepage.html
@@ -152,6 +152,7 @@
         .profile img {
         width: 80px;
         height: 80px;
+        border-radius: 50px;
         vertical-align: middle;
         }
 
@@ -162,7 +163,11 @@
     <h1>Requisition Management System</h1>
     <h2>Welcome, {{ username }}!</h2>
     <div class="profile">
-    <a href="{% url 'profile_details' %}" ><img src="/static/images/profile.png" alt="Logo"></a>
+        {%if user.photo%}
+        <a href="{% url 'profile_details' %}" ><img src="{{ user.photo.url }}"  alt="Logo"></a>
+        {%else%}
+        <a href="{% url 'profile_details' %}" ><img src="/static/images/profile.png"   alt="Logo"></a>
+        {%endif%}
     </div>
     <div class="logo">
         <img src="/static/images/logo.png" alt="Logo">
