--- a/apps/templates/homepage.html
+++ b/apps/templates/homepage.html
@@ -155,6 +155,25 @@
         border-radius: 50px;
         vertical-align: middle;
         }
+        .logout-button {
+        position: absolute;
+        top:100px;
+        right:250px;
+    }
+
+    .logout-button a {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #f44336;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 4px;
+    }
+
+    .logout-button a:hover {
+        background-color: #d32f2f;
+    }
+
 
     </style>
 </head>
@@ -172,6 +191,10 @@
     <div class="logo">
         <img src="/static/images/logo.png" alt="Logo">
     </div>
+    <div class="logout-button">
+        <a href="{% url 'login_view' %}">Logout</a>
+    </div>
+    
     
     </div>
     <div class="content">
@@ -201,6 +224,7 @@
             
             </div>
         </div>
+       
     </div>
 </div>
 
