--- a/apps/templates/department_head.html
+++ b/apps/templates/department_head.html
@@ -156,6 +156,24 @@
     background-color: #546cb9;
     padding: 10px;
 }
+.logout-button {
+        position: absolute;
+        top:100px;
+        right:250px;
+    }
+
+    .logout-button a {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #f44336;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 4px;
+    }
+
+    .logout-button a:hover {
+        background-color: #d32f2f;
+    }
 
     </style>
 </head>
@@ -173,6 +191,9 @@
             </div>
         <div class="logo">
             <img src="/static/images/logo.png" alt="Logo">
+        </div>
+        <div class="logout-button">
+            <a href="{% url 'login_view' %}">Logout</a>
         </div>
     </div>
     <div class="navigation">
