--- a/apps/templates/store_executive.html
+++ b/apps/templates/store_executive.html
@@ -225,6 +225,24 @@
             top: 90px;
             right: 200px;
         }
+        .logout-button {
+        position: absolute;
+        top:100px;
+        right:250px;
+    }
+
+    .logout-button a {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #f44336;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 4px;
+    }
+
+    .logout-button a:hover {
+        background-color: #d32f2f;
+    }
     </style>
 </head>
 <body>
@@ -250,7 +268,9 @@
             <br>
             <p>Notifications</p>
         </div>
-        
+        <div class="logout-button">
+            <a href="{% url 'login_view' %}">Logout</a>
+        </div>
     </div>
     <div class="navigation">
         <ul>
